--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
         </activity>
         <activity android:name=".FavoritesActivity"
             android:parentActivityName=".MainActivity"/>
+        <activity android:name=".CreateGroupActivity"
+            android:parentActivityName=".MainActivity"/>
     </application>
 
 </manifest>
