--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,17 +8,29 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity android:name=".MainActivity"
-            android:windowSoftInputMode="adjustPan|adjustResize">
+        <activity
+            android:name=".MainActivity"
+            android:windowSoftInputMode="adjustPan|adjustResize" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".FavoritesActivity"
-            android:parentActivityName=".MainActivity"/>
-        <activity android:name=".CreateGroupActivity"
-            android:parentActivityName=".MainActivity"/>
+        <activity
+            android:name=".FavoritesActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".CreateGroupActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".GroupHome"
+            android:label="@string/title_activity_group_home"
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="edu.pitt.cs.cs1635.studybuddies.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
