- Added study group list files

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="edu.pitt.cs.cs1635.studybuddies.GroupHome" />
         </activity>
+        <activity
+            android:name=".StudyGroupList"
+            android:label="@string/title_activity_study_group_list"
+            android:parentActivityName=".GroupHome" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="edu.pitt.cs.cs1635.studybuddies.GroupHome" />
+        </activity>
     </application>
 
 </manifest>
